Fix footer padding on mobile

--- a/wp-content/themes/paylidify/sass/navigation/_footer-menus.scss
+++ b/wp-content/themes/paylidify/sass/navigation/_footer-menus.scss
@@ -94,6 +94,7 @@
 @media screen and (max-width: 767px) {
 	.footer-navigation {
 		width: 100%;
+		padding: 15px;
 	}
 
 	.footer-navigation ul#footer-menu > li {
